<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="contact"
            type="com.grammarly.avatarcontacts.model.Contact" />

        <variable
            name="callback"
            type="com.grammarly.avatarcontacts.ui.ContactClickCallback" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_horizontal_margin"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:minHeight="100dp"
        android:onClick="@{() ->  callback.onClick(contact)}"
        android:orientation="horizontal"
        app:cardCornerRadius="@dimen/cardView_round_radius"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/item_horizontal_margin"
                android:contentDescription="@string/cd_avatar_image_of_the_contact"
                android:src="@android:drawable/stat_notify_error"
                app:error="@{@android:drawable/stat_notify_error}"
                app:imageUrl="@{contact.avatarUrl}" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_horizontal_margin">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cd_name_of_the_contact"
                    android:text="@{contact.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:contentDescription="@string/cd_e_mail_of_the_contact"
                    android:text="@{contact.email}"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email"
                    android:contentDescription="@string/cd_phone_number_of_the_contact"
                    android:text="@{contact.phoneNumber}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>
