<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="callbackPhoneNumber"
            type="com.grammarly.avatarcontacts.ui.PhoneNumberClickCallback" />

        <variable
            name="callbackEmailAddress"
            type="com.grammarly.avatarcontacts.ui.EmailClickCallback" />

        <variable
            name="contactViewModel"
            type="com.grammarly.avatarcontacts.viewmodel.ContactViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:contentDescription="@string/cd_avatar_image_of_the_contact"
                android:src="@android:drawable/stat_notify_error"
                app:error="@{@android:drawable/stat_notify_error}"
                app:imageUrl="@{contactViewModel.mContact.avatarUrl}" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_horizontal_margin">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/cd_name_of_the_contact"
                    android:text="@{contactViewModel.mContact.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


                <RelativeLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:layout_margin="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/email_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:text="@string/e_mail"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/email_title"
                        android:layout_toRightOf="@id/email_title"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:onClick="@{() ->  callbackEmailAddress.onClick()}"
                        android:contentDescription="@string/cd_e_mail_of_the_contact"
                        android:text="@{contactViewModel.mContact.email}"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_below="@id/email">

                    <TextView
                        android:id="@+id/phone_number_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:text="@string/phone_number"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/phone_number_title"
                        android:layout_toEndOf="@id/phone_number_title"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:onClick="@{() ->  callbackPhoneNumber.onClick()}"
                        android:contentDescription="@string/cd_phone_number_of_the_contact"
                        android:text="@{contactViewModel.mContact.phoneNumber}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </RelativeLayout>


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>